Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127713

QProgressBar does not set a localisable label value by default

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.10.0 FF
    • 6.7
    • Active Qt
    • None
    • All
    • d5f00591c (dev)

      Greetings,

      QProgressBar, and therefore QProgressDialog do not offer a localisable label value by default.

      Context:

      In KDE applications, for the last two years or so, I’ve been crunching through the used QProgressBar’s with percent value labels, and making them localisable, so that the percent values can be modified accordingly to the user’s locale.

      When using Qt Designer to build UIs, the percent value (%p%) appears localisable on the right pane, but it has to be modified and saved again in order to be picked up by the localisation framework. While adding it in code, setFormat has to be called explicitly to set the %p% available for localisation. This is not ideal, since not every developer may think of this.

      For QProgressDialog the issue is a bit more complex, since I believe the underlying QProgressBar has to be overridden in code to call setFormat. To be fair, QProgressDialog is used in many more places, and it is really tedious to find them all and fix. Not to mention there are still a lot of QProgressBar’s to tackle aside from these.

      It would be really nice, if for QProgressDialog and QProgressBar respectively, the %p% label value would be offered by default, so that neither developers, nor i18n folks have to chase these while they are continuously being added to new code. Offering this label to i18n by default will help Qt, and therefore related software look more and more professional via abiding every locale’s settings.

      I am not an expert in Qt things, so feel free to correct me, and offer guidance.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            bitigchi Emir SARI
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes